그래프 수정

--- a/app/src/main/res/layout/activity_theme_detail.xml
+++ b/app/src/main/res/layout/activity_theme_detail.xml
@@ -412,7 +412,7 @@
                     android:layout_marginRight="35.3dp"
                     android:layout_marginBottom="26.5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="121dp"/>
 
 
             </LinearLayout>
