--- a/app/src/main/res/layout/item_theme_list_lack.xml
+++ b/app/src/main/res/layout/item_theme_list_lack.xml
@@ -39,14 +39,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
-                android:id="@+id/iv_theme_background"
+                android:id="@+id/iv_theme_lack_background"
                 android:background="#00000000"/>
 
         </com.ssomai.android.scalablelayout.ScalableLayout>
 
         <LinearLayout
             android:orientation="horizontal"
-            android:id="@+id/rl_theme_item"
+            android:id="@+id/rl_theme_lack_item"
             android:layout_gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -98,7 +98,7 @@
                     android:focusable="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_theme_title"/>
+                    android:id="@+id/tv_theme_lack_title"/>
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -113,7 +113,7 @@
                         android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tv_theme_versus_max"/>
+                        android:id="@+id/tv_theme_lack_versus_max"/>
 
                     <kr.puzi.puzi.ui.customview.NotoTextView
                         app:fontWeight="regular"
@@ -123,7 +123,7 @@
                         android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tv_theme_versus"/>
+                        android:id="@+id/tv_theme_lack_versus"/>
 
                     <kr.puzi.puzi.ui.customview.NotoTextView
                         app:fontWeight="regular"
@@ -133,7 +133,7 @@
                         android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tv_theme_versus_min"/>
+                        android:id="@+id/tv_theme_lack_versus_min"/>
 
                 </LinearLayout>
 
@@ -158,7 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:id="@+id/tv_theme_item_count"
+                    android:id="@+id/tv_theme_lack_item_count"
                     android:layout_marginLeft="1.9dp"
                     android:text="2000"
                     android:textColor="#ffffff"
