--- a/app/src/main/res/drawable/progress_thema.xml
+++ b/app/src/main/res/drawable/progress_thema.xml
@@ -3,106 +3,138 @@
 
   <item android:id="@android:id/background">
     <shape>
-      <solid android:color="#00000000" />
       <corners android:radius="10dp" />
+      <gradient
+          android:angle="270"
+          android:endColor="#00000000"
+          android:startColor="#00000000" />
     </shape>
   </item>
 
-  <item
-      android:id="@android:id/secondaryProgress">
-    <layer-list>
-      <item>
-        <clip
-            android:layout_height="wrap_content"
-            android:clipOrientation="vertical"
-            android:gravity="fill_vertical">
-          <layer-list>
-            <item android:top="130dp">
-              <shape>
-                <solid android:color="#60b3fb" />
-              </shape>
-            </item>
-
-            <item android:top="128dp">
-              <shape>
-                <solid android:color="#00000000" />
-              </shape>
-            </item>
-
-            <item
-                android:bottom="52dp"
-                android:top="52dp">
-              <shape>
-                <solid android:color="#9b9b9b" />
-              </shape>
-            </item>
-
-            <item android:bottom="128dp">
-              <shape>
-                <solid android:color="#00000000" />
-              </shape>
-            </item>
-
-            <item android:bottom="130dp">
-              <shape>
-                <solid android:color="#ff2470" />
-              </shape>
-            </item>
-
-          </layer-list>
-        </clip>
-
-      </item>
-
-    </layer-list>
-  </item>
-
-  <item android:id="@android:id/progress">
-    <layer-list>
-      <item>
-        <clip
-            android:layout_height="wrap_content"
-            android:clipOrientation="vertical"
-            android:gravity="fill_vertical">
-          <layer-list>
-            <item android:top="130dp">
-              <shape>
-                <solid android:color="#60b3fb" />
-              </shape>
-            </item>
-
-            <item android:top="128dp">
-              <shape>
-                <solid android:color="#00000000" />
-              </shape>
-            </item>
-
-            <item
-                android:bottom="52dp"
-                android:top="52dp">
-              <shape>
-                <solid android:color="#9b9b9b" />
-              </shape>
-            </item>
-
-            <item android:bottom="128dp">
-              <shape>
-                <solid android:color="#00000000" />
-              </shape>
-            </item>
-
-            <item android:bottom="130dp">
-              <shape>
-                <solid android:color="#ff2470" />
-              </shape>
-            </item>
-
-          </layer-list>
-        </clip>
-
-      </item>
-
-    </layer-list>
+  <item android:id="@+id/progressshape">
+    <bitmap android:src="@drawable/bg_progress_thema"/>
   </item>
 
 </layer-list>
+
+    <!--
+    <?xml version="1.0" encoding="utf-8"?>
+    <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+      <item
+          android:id="@android:id/background">
+        <shape>
+          <solid
+              android:color="#00000000" />
+          <corners android:radius="10dp" />
+        </shape>
+      </item>
+
+      &lt;!&ndash;<item
+          android:id="@android:id/secondaryProgress">
+        <layer-list>
+          <item>
+            <clip
+                android:layout_height="wrap_content"
+                android:clipOrientation="vertical"
+                android:gravity="fill_vertical">
+              <layer-list>
+                <item android:top="130dp">
+                  <shape>
+                    <solid
+                        android:color="#60b3fb" />
+                  </shape>
+                </item>
+
+                <item android:top="128dp">
+                  <shape>
+                    <solid
+                        android:color="#00000000" />
+                  </shape>
+                </item>
+
+                <item
+                    android:bottom="52dp"
+                    android:top="52dp">
+                  <shape>
+                    <solid
+                        android:color="#9b9b9b" />
+                  </shape>
+                </item>
+
+                <item android:bottom="128dp">
+                  <shape>
+                    <solid
+                        android:color="#00000000" />
+                  </shape>
+                </item>
+
+                <item android:bottom="130dp">
+                  <shape>
+                    <solid
+                        android:color="#ff2470" />
+                  </shape>
+                </item>
+
+              </layer-list>
+            </clip>
+
+          </item>
+
+        </layer-list>
+      </item>&ndash;&gt;
+
+      <item android:id="@android:id/progress">
+        <layer-list>
+          <item>
+            <clip
+                android:layout_height="wrap_content"
+                android:gravity="fill_vertical">
+              <layer-list>
+                <item android:top="130dp">
+                  <shape>
+                    <solid
+                        android:color="#60b3fb" />
+                  </shape>
+                </item>
+
+                <item android:top="128dp">
+                  <shape>
+                    <solid
+                        android:color="#00000000" />
+                  </shape>
+                </item>
+
+                <item
+                    android:bottom="52dp"
+                    android:top="52dp">
+                  <shape>
+                    <solid
+                        android:color="#9b9b9b" />
+                  </shape>
+                </item>
+
+                <item android:bottom="128dp">
+                  <shape>
+                    <solid
+                        android:color="#00000000" />
+                  </shape>
+                </item>
+
+                <item android:bottom="130dp">
+                  <shape>
+                    <solid
+                        android:color="#ff2470" />
+                  </shape>
+                </item>
+
+              </layer-list>
+            </clip>
+
+          </item>
+
+        </layer-list>
+      </item>
+
+    </layer-list>
+    -->
